--- a/index.html
+++ b/index.html
@@ -8,22 +8,19 @@
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
   </head>
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="https://github.com/JBKahn/space-apps-2014">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/JBKahn/space-apps-2014/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/JBKahn/space-apps-2014/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
+          <li class="fork"><a href="https://github.com/JBKahn/space-apps-2014">View Repo</a></li>
+          <li class="downloads"><a href="presentation_slides.pdf">Slides</a></li>
+          <li class="downloads"><a href="earth.html">Earth View</a></li>
+          <li class="downloads"><a href="moon.html">Moon View</a></li>
+          <li class="downloads"><a href="space_walk.html">Space Walk View</a></li>
+          <li class="downloads"><a href="stars.html">Stars View</a></li>
+          <li class="title">Pages</li>
         </nav>
       </div><!-- end header -->
 
@@ -31,48 +28,23 @@
 
       <section>
         <div id="title">
-          <h1>Space-apps-2014</h1>
-          <p>Spacet Challenge for NASA Space Apps 2014</p>
+          <h1>Insights</h1>
+          <p><a href="https://2014.spaceappschallenge.org/project/insight-/" target="_blank">Spacet Challenge for NASA Space Apps 2014</a></p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/JBKahn">JBKahn</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
-
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+        <h3>Product</h3>
+        <p>InSight is a voice and motion activated data visualization platform and companion heads up display application. It aggregates information from biometric sensors, location, and external data such as oxygen and radiation. Using this data, InSight enhances the experience of being in outer space by providing contextual information about your surroundings via augmented reality. </p>
+        <h3>Team</h3>
+        <img src="images/team.jpg">
+        <p>From left to right: Stewart Aguanno, Katie Hrycak, Johnny Chauvet, Joseph Kahn</p>
+        <h3>Description</h3>
+        <p>Imagine yourself choosing your vacation destination to be space. It’s a pretty big concept that is quickly becoming feasible. We have already had civilians go to space, sent a tweet from space, and even filmed a music video in the ISS. You too will have those opportunities in the near future. With all of the existing apps and technologies available to you already, what more could you possibly need?</p>
+        <p>The next level of experience is one that provides you a connection to your surroundings in a heads up display that is voice and motion controlled. Downloading InSight on the heads up display platform of your choice opens up your experience and connection to space.</p>
+        <p>Point into deep space and learn more about distant galaxies and nebulas that you are looking at, point at any near object to learn more, see more about your fellow tourists while out on a space walk, know your energy and oxygen levels, see a map of where you are in your environment relative to other people and objects, get notified when you are about to pass over home, and see location names of cities and countries while looking at Earth.</p>
+        <p>Using existing sensors, biometrics from suits, location data, and NASA information of celestial bodies, InSight is the must-have application platform to use and build off of for years to come.</p>
       </section>
-
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
   </body>
 </html>
