--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
         </div>
         <h3>Product</h3>
         <p>InSight is a voice and motion activated data visualization platform and companion heads up display application. It aggregates information from biometric sensors, location, and external data such as oxygen and radiation. Using this data, InSight enhances the experience of being in outer space by providing contextual information about your surroundings via augmented reality. </p>
+
+        <h3>Interacting With The Views</h3>
+        <p>Click on the top bar to see an example of a notification or click on the bottom right corner to see an example of contextual information/waypoints when you tell Insights where you want to go or ask what something is.</p>
+
+        <h3>Screenshots</h3>
+        <p>The product screens were designed with a 1920*1080 resolution. Here I've included screenshots of what it looks like on my screen, click to enlarge:</p>
+        <a href="images/space_view.jpg" target="_blank"><img src="images/space_view_thumb.jpg" width="323px" height="auto"></a>
+        <a href="images/space_walk_view.jpg" target="_blank"><img src="images/space_walk_view_thumb.jpg" width="323px" height="auto"></a>
+        <a href="images/moon_view.png" target="_blank"><img src="images/moon_view_thumb.png" width="323px" height="auto"></a>
+        <a href="images/earth_view.jpg" target="_blank"><img src="images/earth_view_thumb.jpg" width="323px" height="auto"></a>
+
         <h3>Team</h3>
         <img src="images/team.jpg">
         <p>From left to right: Stewart Aguanno, Katie Hrycak, Johnny Chauvet, Joseph Kahn</p>
