target blank the links at the top

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <div id="header">
         <nav>
           <li class="fork"><a href="https://github.com/JBKahn/space-apps-2014">View Repo</a></li>
-          <li class="downloads"><a href="presentation_slides.pdf">Slides</a></li>
-          <li class="downloads"><a href="earth.html">Earth View</a></li>
-          <li class="downloads"><a href="moon.html">Moon View</a></li>
-          <li class="downloads"><a href="space_walk.html">Space Walk View</a></li>
-          <li class="downloads"><a href="stars.html">Stars View</a></li>
+          <li class="downloads"><a href="presentation_slides.pdf" target="_blank">Slides</a></li>
+          <li class="downloads"><a href="earth.html" target="_blank">Earth View</a></li>
+          <li class="downloads"><a href="moon.html" target="_blank">Moon View</a></li>
+          <li class="downloads"><a href="space_walk.html" target="_blank">Space Walk View</a></li>
+          <li class="downloads"><a href="stars.html" target="_blank">Stars View</a></li>
           <li class="title">Pages</li>
         </nav>
       </div><!-- end header -->
