adding more info

--- a/index.html
+++ b/index.html
@@ -47,6 +47,22 @@
         <a href="images/moon_view.png" target="_blank"><img src="images/moon_view_thumb.png" width="323px" height="auto"></a>
         <a href="images/earth_view.jpg" target="_blank"><img src="images/earth_view_thumb.jpg" width="323px" height="auto"></a>
 
+        <h3>Parts of The Interface</h3>
+        <ol>
+          <li>
+            <p><strong>The Status Bar:</strong> located at the top center is used to display relevant information about your status. For example, how far away you are from the ISS</p>
+          </li>
+          <li>
+            <p><strong>The Mini-map:</strong> located at the top right is used to display a two-dimensional map representation of three-dimensional space. It uses left, right, forward and back in the same way a normal GPS system would. It also uses color to distinguish between items above and below you, white representing items that or in-line with you. This combined with the zoom/info feature allows you to navigate space by placing waypoints on objects you want to get to.</p>
+          </li>
+          <li>
+            <p><strong>The Notifications:</strong> located under the status bar are used to display relevant updates and notifications. For example, if you need to return to the ISS because of an emergency, a cool astronimical event is going on, or that you need to eat.</p>
+          </li>
+          <li>
+            <p><strong>The Zoom:</strong> located in the mid to bottom right hand corner is used to display relevant information about where you want to go or what you want to know about. You can ask it where something is, and information about that object is also distplayed. Alternativly, you can also point at an object in space and ask for the identification.</p>
+          </li>
+        </ol>
+
         <h3>Team</h3>
         <img src="images/team.jpg">
         <p>From left to right: Stewart Aguanno, Katie Hrycak, Johnny Chauvet, Joseph Kahn</p>
