--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         <h3>Interacting With The Views</h3>
         <p>Click on the top bar to see an example of a notification or click on the bottom right corner to see an example of contextual information/waypoints when you tell Insights where you want to go or ask what something is.</p>
 
+        <h3>Presentation</h3>
+        <iframe width="640" height="360" src="https://www.youtube.com/embed/Px6wA2GlrOk?start=1h54m2s?end=2h02m08s" frameborder="0" allowfullscreen></iframe>
+
         <h3>Screenshots</h3>
         <p>The product screens were designed with a 1920*1080 resolution. Here I've included screenshots of what it looks like on my screen, click to enlarge:</p>
         <a href="images/space_view.jpg" target="_blank"><img src="images/space_view_thumb.jpg" width="323px" height="auto"></a>
