--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p>Click on the top bar to see an example of a notification or click on the bottom right corner to see an example of contextual information/waypoints when you tell Insights where you want to go or ask what something is.</p>
 
         <h3>Presentation</h3>
-        <iframe width="640" height="360" src="https://www.youtube.com/embed/Px6wA2GlrOk?start=1h55m2s" frameborder="0" allowfullscreen></iframe>
+        <iframe width="640" height="360" src="https://www.youtube.com/embed/Px6wA2GlrOk?start=6845" frameborder="0" allowfullscreen></iframe>
 
         <h3>Screenshots</h3>
         <p>The product screens were designed with a 1920*1080 resolution. Here I've included screenshots of what it looks like on my screen, click to enlarge:</p>
